--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,66 @@
 :root {
-  --main-color: #757575;
-  --secondary-color: #212121;
-  --link-color: #2196f3;
+  --text-color: #757575;
+  --contact: #757575;
+  --title-color: #212121;
+  --link-color: #212121;
+  --link-hover-color: #2196f3;
+  --logo-color: #2196f3;
+  --btn-color: #2196f3;
 }
-/* index*/
+/*---------- index-------------*/
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
-  color: var(--main-color);
+  color: var(--text-color);
+  letter-spacing: 0.03em;
+  line-height: 1.71;
 }
 
-.list-item > .link {
+a {
+  text-decoration: none;
+}
+
+.list {
+  list-style: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+.site-logo {
+  font-size: 26px;
+  line-height: calc(31 / 26);
+
+  color: var(--logo-color);
+}
+
+.link {
   font-weight: 500;
   line-height: 1.14;
-  color: var(--secondary-color);
+  letter-spacing: 0.02em;
+  color: var(--link-color);
 }
 
 .link:hover,
 .link:focus {
-  color: var(--link-color);
+  color: var(--link-hover-color);
 }
 
 .tel-link,
 .mail-link {
   font-weight: 500;
-  color: var(--main-color);
+  color: var(--contact);
+  letter-spacing: 0.02em;
   line-height: 1.14;
 }
 
@@ -32,7 +68,7 @@ body {
 .tel-link:focus,
 .mail-link:hover,
 .mail-link:focus {
-  color: var(--link-color);
+  color: var(--link-hover-color);
 }
 
 .hero {
@@ -44,36 +80,41 @@ body {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
+  letter-spacing: 0.06em;
   text-transform: uppercase;
 }
 
 .hero-btn {
+  font-family: 'Roboto', sans-serif;
   color: #ffffff;
+  font-weight: 700;
   font-size: 16px;
-  line-height: 1.87;
-  background-color: var(--link-color);
+  line-height: calc(30 / 16);
+  letter-spacing: 0.06em;
+  background-color: var(--btn-color);
   cursor: pointer;
 }
 
 .features-title {
-  color: var(--secondary-color);
+  color: var(--title-color);
   font-weight: 700;
-  line-height: 1.14;
+  font-size: 14px;
+  line-height: calc(16 / 14);
   text-transform: uppercase;
 }
 
 .title {
-  color: var(--secondary-color);
+  color: var(--title-color);
   font-size: 36px;
   font-weight: 700;
-  line-height: 1.16;
+  line-height: calc(42 / 36);
 }
 
 .user-subtitle {
-  color: var(--secondary-color);
+  color: var(--title-color);
   font-size: 16px;
   font-weight: 500;
-  line-height: 1.18;
+  line-height: calc(19 / 16);
 }
 
 .user-item > .text {
@@ -85,9 +126,10 @@ body {
   background-color: #2f303a;
 }
 
-.address > .mail-link,
-.tel-link {
+.address > .footer-link {
+  color: rgba(255, 255, 255, 0.6);
   font-style: normal;
+  font-weight: 400;
   line-height: 1.71;
 }
 
@@ -99,14 +141,27 @@ body {
 /*Portfolio*/
 
 .item-title {
-  color: var(--secondary-color);
+  color: var(--title-color);
   font-size: 18px;
-  line-height: 2;
+  line-height: calc(36 / 18);
   font-weight: 700;
+  letter-spacing: 0.06em;
 }
 
 .item-text {
-  color: var(--main-color);
   font-size: 16px;
   line-height: 1.8;
+}
+
+.btn {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+}
+
+.btn:hover,
+.btn:focus {
+  color: #ffffff;
 }
