--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ a {
 }
 
 .site-logo {
+  font-family: 'Raleway', sans-serif;
   font-size: 26px;
   line-height: calc(31 / 26);
   font-weight: 700;
